force-app/main/default/objects/CalEnergy_Settings__mdt/CalEnergy_Settings__mdt.object-meta.xml
<CustomObject>
    <label>CalEnergy Settings</label>
    <pluralLabel>CalEnergy Settings</pluralLabel>
</CustomObject>