force-app/main/default/objects/CalEnergy_Settings__mdt/fields/Callout_Interval__c.field-meta.xml
<CustomField>
    <fullName>Callout_Interval__c</fullName>
    <label>Callout Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>