force-app/main/default/objects/CalEnergy_Settings__mdt/fields/Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>