force-app/main/default/objects/CalEnergy_Settings__mdt/fields/Error_Emails__c.field-meta.xml
<CustomField>
    <fullName>Error_Emails__c</fullName>
    <label>Error Emails</label>
    <length>100</length>
    <type>Text</type>
</CustomField>