force-app/main/default/objects/CalEnergy_Settings__mdt/fields/QB_Company_Id_c__c.field-meta.xml
<CustomField>
    <fullName>QB_Company_Id_c__c</fullName>
    <label>QB Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>